# Aviate_Admin

./: .env  .gitignore  .replit  .vercelignore  README.md  SYSTEM_DOCUMENTATION.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  vercel.json  vite.config.js
.agents/: agent_assets_metadata.toml
api/: index.js
attached_assets/: Pasted-Build-an-upgraded-logistics-SaaS-web-application-called_1775856602029.txt
backend/: .gitignore  app.py  config.py  data.db  dummy_orders.xlsx  generate_dummy_excel.py  middleware.py  models.py  optimize_route.py  render.yaml  requirements.txt  restart_flask_and_log.bat  restart_flask_and_log.sh  utils.py
backend/data/: areas.json  test_stops.json
backend/routes/: __init__.py  auth.py  drivers.py  jobs.py  optimization.py  stats.py  stops.py  test_email.py
backend/services/: email_service.py
docs/: API.md  SYSTEM.md  feature-specs.md
server/: auth.js  db.js  index.js  routes.js
src/: AdminMVP.jsx  App.css  App.jsx  DriverApp.jsx  index.css
src/components/: DriverLayout.jsx  EfficiencyBar.jsx  ExplainabilityPanel.jsx  Layout.jsx  Loader.jsx  ProtectedRoute.jsx  RouteBreakdownCard.jsx  Sidebar.jsx  StatCard.jsx
src/context/: WeightsContext.jsx
src/contexts/: AuthContext.jsx
src/data/: mockData.js
src/pages/: Analytics.jsx  Dashboard.jsx  DispatchCenter.jsx  Drivers.jsx  Jobs.jsx  LiveMap.jsx  Login.jsx  MapView.jsx  MyJobs.jsx  NotFound.jsx  Profile.jsx  Register.jsx  Routes.jsx  Settings.jsx
src/services/: api.js  scoringEngine.js
