[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "geopy>=2.4.1",
    "gunicorn>=25.3.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.12.1",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
